--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "symfonyboot/actions",
+    "name": "silasyudi/actions",
     "description": "Test github actions Project",
     "type": "project",
     "license": "proprietary",
